chore : java 버전에 따른 명령어 수정